Add serverside job to fetch vote results.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -28,6 +28,6 @@ twig:
 
 doctrine_couch_db:
     client:
-        dbname: phprfcwatch
+        dbname: rfcwatch
     odm:
         auto_mapping: true
