Add Procfile for dokku deployment

--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,7 @@
         "doctrine/couchdb-odm": "dev-master",
         "doctrine/couchdb-odm-bundle": "dev-master",
         "qafoolabs/no-framework-bundle": "~2.2",
-        "kriswallsmith/buzz": "0.13.*",
-        "appneta/traceview-twig": "dev-master",
-        "appneta/traceview-bundle": "dev-master"
+        "kriswallsmith/buzz": "0.13.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
