--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,13 @@
         "psr-0": { "": "src/", "SymfonyStandard": "app/" }
     },
     "require": {
-        "php": "~5.5",
-        "symfony/symfony": "2.6.*",
+        "php": "~7.0",
+        "symfony/symfony": "2.7.*",
         "twig/extensions": "~1.0",
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~3.0,>=3.0.12",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
+        "doctrine/annotations": "1.2.7",
         "doctrine/couchdb": "dev-master",
         "doctrine/couchdb-odm": "dev-master",
         "doctrine/couchdb-odm-bundle": "dev-master",
