Update to Symfony Flex (4.0) and start over with backend.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@
 /bin/
 /composer.phar
 /node_modules
+
+###> symfony/framework-bundle ###
+/.env
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+###< phpunit/phpunit ###
