--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/yaml": "^4.1",
         "phpunit/phpunit": "^7.2",
         "qafoolabs/no-framework-bundle": "dev-master",
-        "symfony/templating": "^4.1"
+        "symfony/templating": "^4.1",
+        "symfony/webpack-encore-pack": "^1.0"
     },
     "scripts": {
         "auto-scripts": {
