--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "phpunit/phpunit": "^7.2",
         "qafoolabs/no-framework-bundle": "dev-master",
         "symfony/templating": "^4.1",
-        "symfony/webpack-encore-pack": "^1.0"
+        "symfony/webpack-encore-pack": "^1.0",
+        "kriswallsmith/buzz": "0.13.*",
+        "symfony/css-selector": "^4.1"
     },
     "scripts": {
         "auto-scripts": {
