--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "devDependencies": {
     "@symfony/webpack-encore": "^0.20.1",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3"
+  },
+  "dependencies": {
+    "prop-types": "^15.6.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "underscore": "^1.9.1",
+    "whatwg-fetch": "^2.0.4"
   }
 }
