--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -31,3 +31,6 @@ framework:
 
     templating:
         engines: ['twig']
+
+    assets:
+        json_manifest_path: '%kernel.project_dir%/public/build/manifest.json'
