--- a/composer.json
+++ b/composer.json
@@ -2,22 +2,22 @@
     "require": {
         "symfony/flex": "^1.0",
         "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "^4.1",
+        "symfony/asset": "^4.2",
         "symfony/orm-pack": "^1.0",
-        "symfony/twig-bundle": "^4.1",
+        "symfony/twig-bundle": "^4.2",
         "symfony/monolog-bundle": "^3.3",
         "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/form": "^4.1",
-        "symfony/security-bundle": "^4.1",
-        "symfony/translation": "^4.1",
-        "symfony/validator": "^4.1",
-        "symfony/yaml": "^4.1",
+        "symfony/form": "^4.2",
+        "symfony/security-bundle": "^4.2",
+        "symfony/translation": "^4.2",
+        "symfony/validator": "^4.2",
+        "symfony/yaml": "^4.2",
         "phpunit/phpunit": "^7.2",
-        "qafoolabs/no-framework-bundle": "dev-master",
-        "symfony/templating": "^4.1",
+        "qafoolabs/no-framework-bundle": "3.0-alpha1",
+        "symfony/templating": "^4.2",
         "symfony/webpack-encore-pack": "^1.0",
         "kriswallsmith/buzz": "0.13.*",
-        "symfony/css-selector": "^4.1",
+        "symfony/css-selector": "^4.2",
         "zendframework/zend-feed": "^2.10"
     },
     "scripts": {
