--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "@symfony/webpack-encore": "^0.20.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.1",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.3"
+    "node-sass": "4.9.0",
+    "sass-loader": "7.0.3"
   },
   "dependencies": {
     "prop-types": "^15.6.1",
