--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.20.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/preset-react": "^7.0.0",
+    "@symfony/webpack-encore": "0.28",
     "bootstrap": "^4.1.1",
     "node-sass": "4.9.0",
     "sass-loader": "7.0.3"
