--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
     "@symfony/webpack-encore": "0.28",
-    "bootstrap": "^4.1.1",
     "node-sass": "4.9.4",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "7.0.3"
   },
   "dependencies": {
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "tailwindcss": "^1.1.3",
     "underscore": "^1.9.1",
     "whatwg-fetch": "^2.0.4"
   }
