Allow hiding votes

--- a/composer.json
+++ b/composer.json
@@ -44,5 +44,11 @@
         "psr-4": {
             "App\\Tests\\": "tests/"
         }
+    }, 
+    "extra": {
+        "symfony": {
+            "allow-contrib": true,
+            "require": "4.4.*"
+        }
     }
 }
