--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "kriswallsmith/buzz": "0.13.*",
         "symfony/css-selector": "^4.2",
         "zendframework/zend-feed": "^2.10",
-        "phake/phake": "^3.1"
+        "phake/phake": "^3.1",
+        "ocramius/package-versions": "1.7"
     },
     "scripts": {
         "auto-scripts": {
@@ -46,6 +47,7 @@
         }
     }, 
     "extra": {
+        "platform": {"php": "7.3"},
         "symfony": {
             "allow-contrib": true,
             "require": "4.4.*"
