--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "sass-loader": "7.0.3"
   },
   "dependencies": {
+    "@tailwindcss/ui": "^0.3.0",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
