--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "beberlei/phprfcwatch",
     "require": {
+        "ext-json": "*",
         "symfony/flex": "^1.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.2",
@@ -21,7 +22,8 @@
         "symfony/css-selector": "^4.2",
         "zendframework/zend-feed": "^2.10",
         "phake/phake": "^3.1",
-        "ocramius/package-versions": "1.7"
+        "ocramius/package-versions": "1.7",
+        "predis/predis": "^1.1"
     },
     "scripts": {
         "auto-scripts": {
