Show login note and use bold to show you already voted.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,3 +31,5 @@ services:
         arguments:
             - '%env(GITHUB_CLIENT_ID)%'
             - '%env(GITHUB_CLIENT_SECRET)%'
+
+    Predis\Client: ~
