--- a/.env.dist
+++ b/.env.dist
@@ -23,3 +23,9 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
 ADMIN_PASSWORD=admin
+###> symfony/mercure-bundle ###
+# See https://symfony.com/doc/current/mercure.html#configuration
+MERCURE_PUBLISH_URL=http://mercure/.well-known/mercure
+# The default token is signed with the secret key: !ChangeMe!
+MERCURE_JWT_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJtZXJjdXJlIjp7InB1Ymxpc2giOltdfX0.Oo0yg7y4yMa1vr_bziltxuTCqb8JVHKxp-f_FwwOim0
+###< symfony/mercure-bundle ###
