--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "zendframework/zend-feed": "^2.10",
         "phake/phake": "^3.1",
         "ocramius/package-versions": "1.7",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "symfony/mercure-bundle": "^0.2.4"
     },
     "scripts": {
         "auto-scripts": {
