--- a/.env.dist
+++ b/.env.dist
@@ -25,7 +25,7 @@ MAILER_URL=null://localhost
 ADMIN_PASSWORD=admin
 ###> symfony/mercure-bundle ###
 # See https://symfony.com/doc/current/mercure.html#configuration
-MERCURE_PUBLISH_URL=http://mercure/.well-known/mercure
+MERCURE_PUBLISH_URL=http://127.0.0.1:3000/.well-known/mercure
 # The default token is signed with the secret key: !ChangeMe!
 MERCURE_JWT_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJtZXJjdXJlIjp7InB1Ymxpc2giOltdfX0.Oo0yg7y4yMa1vr_bziltxuTCqb8JVHKxp-f_FwwOim0
 ###< symfony/mercure-bundle ###
