Move ping on updated RFC to a Doctrine listener.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,9 @@ services:
             - '%env(GITHUB_CLIENT_SECRET)%'
 
     Predis\Client: ~
+
+    App\Model\UpdatedRfcListener:
+        tags:
+            - name: 'doctrine.orm.entity_listener'
+              event: 'postUpdate'
+              entity: 'App\Entity\Rfc'
