--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "reconnecting-eventsource": "^1.0.4",
     "tailwindcss": "^1.1.3",
     "underscore": "^1.9.1",
     "whatwg-fetch": "^2.0.4"
