--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ updates.db
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-pack ###
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
