--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "phake/phake": "^3.1",
         "composer/package-versions-deprecated": "^1.11",
         "predis/predis": "^1.1",
-        "symfony/mercure-bundle": "^0.2.4"
+        "symfony/mercure-bundle": "^0.2.4",
+        "doctrine/coding-standard": "^9.0"
     },
     "scripts": {
         "auto-scripts": {
