--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "symfony/validator": "^4.2",
         "symfony/yaml": "^4.2",
         "phpunit/phpunit": "^7.2",
-        "qafoolabs/no-framework-bundle": "3.0-alpha1",
+        "gyro/mvc-bundle": "^0.10",
         "symfony/templating": "^4.2",
         "symfony/webpack-encore-pack": "^1.0",
         "kriswallsmith/buzz": "0.13.*",
