Update orm-pack to version 2 for ORM 2.9 and all its dependencies.

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -23,5 +23,6 @@
     <file>public/</file>
     <file>src/</file>
     <file>tests/</file>
+    <exclude-pattern>config/bundles.php</exclude-pattern>
 
 </ruleset>
