--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,7 @@
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.5",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "symfony/profiler-pack": "^1.0",
-        "symfony/web-server-bundle": "^4.1"
+        "symfony/profiler-pack": "^1.0"
     },
     "autoload": {
         "psr-4": {
@@ -50,7 +49,7 @@
         "psr-4": {
             "App\\Tests\\": "tests/"
         }
-    }, 
+    },
     "extra": {
         "platform": {"php": "7.4"},
         "symfony": {
