--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "beberlei/phprfcwatch",
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^7.4",
         "ext-json": "*",
         "symfony/flex": "^1.0",
         "sensio/framework-extra-bundle": "^5.1",
