--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         "phpunit/phpunit": "^9.5",
         "gyro/mvc-bundle": "^0.10",
         "symfony/templating": "^4.2",
-        "symfony/webpack-encore-pack": "^1.0",
         "kriswallsmith/buzz": "0.13.*",
         "symfony/css-selector": "^4.2",
         "zendframework/zend-feed": "^2.10",
         "phake/phake": "^3.1",
         "composer/package-versions-deprecated": "^1.11",
         "predis/predis": "^1.1",
-        "doctrine/coding-standard": "^9.0"
+        "doctrine/coding-standard": "^9.0",
+        "symfony/webpack-encore-bundle": "^1.13"
     },
     "scripts": {
         "auto-scripts": {
@@ -37,7 +37,8 @@
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.5",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/profiler-pack": "^1.0",
+        "symfony/web-server-bundle": "4.4.*"
     },
     "autoload": {
         "psr-4": {
