--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,11 @@
 {
     "name": "beberlei/phprfcwatch",
     "require": {
-        "php": "^7.4",
+        "php": "^8.2",
         "ext-json": "*",
         "symfony/flex": "^1.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.2",
-        "symfony/orm-pack": "^2.0",
         "symfony/twig-bundle": "^4.2",
         "symfony/monolog-bundle": "^3.3",
         "symfony/swiftmailer-bundle": "^3.2",
@@ -16,16 +15,19 @@
         "symfony/validator": "^4.2",
         "symfony/yaml": "^4.2",
         "phpunit/phpunit": "^9.5",
-        "gyro/mvc-bundle": "^0.10",
+        "gyro/mvc-bundle": "^1.0-beta",
         "symfony/templating": "^4.2",
         "kriswallsmith/buzz": "0.13.*",
         "symfony/css-selector": "^4.2",
-        "zendframework/zend-feed": "^2.10",
+        "laminas/laminas-feed": "^2.10",
         "phake/phake": "^3.1",
         "composer/package-versions-deprecated": "^1.11",
         "predis/predis": "^1.1",
         "doctrine/coding-standard": "^9.0",
-        "symfony/webpack-encore-bundle": "^1.13"
+        "symfony/webpack-encore-bundle": "^1.13",
+        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.15"
     },
     "scripts": {
         "auto-scripts": {
@@ -37,8 +39,9 @@
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.5",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "symfony/profiler-pack": "^1.0",
-        "symfony/web-server-bundle": "4.4.*"
+        "symfony/web-server-bundle": "4.4.*",
+        "symfony/stopwatch": "4.4.*",
+        "symfony/web-profiler-bundle": "4.4.*"
     },
     "autoload": {
         "psr-4": {
@@ -55,6 +58,12 @@
         "symfony": {
             "allow-contrib": true,
             "require": "4.4.*"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "symfony/flex": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     }
 }
