--- a/.env.dist
+++ b/.env.dist
@@ -23,3 +23,7 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
 ADMIN_PASSWORD=admin
+
+###> sentry/sentry-symfony ###
+SENTRY_DSN=
+###< sentry/sentry-symfony ###
