Replace node-sass with sass to avoid compiliation during asset build.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
     "@symfony/webpack-encore": "0.28",
-    "node-sass": "4.14.1",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "7.0.3"
+    "sass": "^1.62.1",
+    "sass-loader": "7.3.1"
   },
   "dependencies": {
     "@tailwindcss/ui": "^0.3.0",
