--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "require": {
         "php": "^8.1",
         "ext-json": "*",
+        "ext-tideways": "@stable",
         "symfony/flex": "^1.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.2",
@@ -66,6 +67,9 @@
             "symfony/flex": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "php-http/discovery": true
+        },
+        "platform": {
+            "ext-tideways": "1.0.0"
         }
     }
 }
