Rework for pgsql

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -8,12 +8,8 @@ parameters:
 doctrine:
     dbal:
         # configure these for your database server
-        driver: 'pdo_mysql'
-        server_version: '5.7'
-        charset: utf8mb4
-        default_table_options:
-            charset: utf8mb4
-            collate: utf8mb4_unicode_ci
+        driver: 'pdo_pgsql'
+        server_version: '12'
 
         url: '%env(resolve:DATABASE_URL)%'
     orm:
