--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "php": "^8.1",
         "ext-json": "*",
         "ext-tideways": "@stable",
+        "ext-dom": "*",
         "symfony/flex": "^1.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.2",
