--- a/fpm.conf
+++ b/fpm.conf
@@ -1,1 +1,3 @@
 php_value[tideways.features.distributed_tracing]=1
+php_value[tideways.dynamic_tracepoints.enable_web]=1
+php_value[tideways.dynamic_tracepoints.enable_cli]=1
