--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
         "sentry/sentry-symfony": "^4.8",
-        "symfony/dotenv": "5.4.*"
+        "symfony/dotenv": "5.4.*",
+        "symfony/config": "5.4.*"
     },
     "scripts": {
         "auto-scripts": {
