--- a/composer.json
+++ b/composer.json
@@ -5,24 +5,24 @@
         "ext-json": "*",
         "ext-tideways": "@stable",
         "ext-dom": "*",
-        "symfony/flex": "^1.0",
-        "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "^5.4",
-        "symfony/twig-bundle": "^5.4",
+        "symfony/flex": "^2.0",
+        "symfony/config": "^6.3",
+        "sensio/framework-extra-bundle": "^6.2",
+        "symfony/asset": "^6.3",
+        "symfony/twig-bundle": "^6.3",
         "symfony/monolog-bundle": "^3.3",
-        "symfony/form": "^5.4",
-        "symfony/security-bundle": "^5.4",
-        "symfony/translation": "^5.4",
-        "symfony/validator": "^5.4",
-        "symfony/yaml": "^5.4",
+        "symfony/form": "^6.3",
+        "symfony/security-bundle": "^6.3",
+        "symfony/translation": "^6.3",
+        "symfony/validator": "^6.3",
+        "symfony/yaml": "^6.3",
         "phpunit/phpunit": "^9.5",
         "gyro/mvc-bundle": "^1.0-beta",
-        "symfony/templating": "^5.4",
+        "symfony/templating": "^6.3",
         "kriswallsmith/buzz": "0.13.*",
-        "symfony/css-selector": "^5.4",
+        "symfony/css-selector": "^6.3",
         "laminas/laminas-feed": "^2.10",
-        "phake/phake": "^3.1",
-        "composer/package-versions-deprecated": "^1.11",
+        "phake/phake": "^4.4",
         "predis/predis": "^1.1",
         "doctrine/coding-standard": "^9.0",
         "symfony/webpack-encore-bundle": "^1.13",
@@ -30,8 +30,8 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
         "sentry/sentry-symfony": "^4.8",
-        "symfony/dotenv": "5.4.*",
-        "symfony/config": "5.4.*"
+        "symfony/dotenv": "^6.3",
+        "symfony/config": "^6.3"
     },
     "scripts": {
         "auto-scripts": {
@@ -42,8 +42,8 @@
     "require-dev": {
         "symfony/maker-bundle": "^1.5",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "symfony/stopwatch": "5.4.*",
-        "symfony/web-profiler-bundle": "5.4.*"
+        "symfony/stopwatch": "6.3.*",
+        "symfony/web-profiler-bundle": "6.3.*"
     },
     "autoload": {
         "psr-4": {
@@ -59,7 +59,7 @@
         "platform": {"php": "7.4"},
         "symfony": {
             "allow-contrib": true,
-            "require": "5.4.*"
+            "require": "6.3.*"
         }
     },
     "config": {
