Add Messenger and Scheduler components to run php-rfc-watch:synchronize every minute via queue.

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,9 @@
         "doctrine/orm": "^2.15",
         "sentry/sentry-symfony": "^4.8",
         "symfony/dotenv": "^6.3",
-        "symfony/config": "^6.3"
+        "symfony/config": "^6.3",
+        "symfony/scheduler": "6.3.*",
+        "symfony/messenger": "6.3.*"
     },
     "scripts": {
         "auto-scripts": {
