Symfony upgrade from 4.4 to 6.3 (#109)
* Add docker-compose for postgresql local development

* Update Symfony to 5.4

* Remove swiftmailer bundle

* remove symfony/web-server-bundle, deprecated for 6.x

* symfony/config

* Upgrade to Symfony 6.3

* Add Messenger and Scheduler components to run php-rfc-watch:synchronize every minute via queue.

* Housekeeping: phpcs

--- a/composer.json
+++ b/composer.json
@@ -5,25 +5,24 @@
         "ext-json": "*",
         "ext-tideways": "@stable",
         "ext-dom": "*",
-        "symfony/flex": "^1.0",
-        "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "^4.2",
-        "symfony/twig-bundle": "^4.2",
+        "symfony/flex": "^2.0",
+        "symfony/config": "^6.3",
+        "sensio/framework-extra-bundle": "^6.2",
+        "symfony/asset": "^6.3",
+        "symfony/twig-bundle": "^6.3",
         "symfony/monolog-bundle": "^3.3",
-        "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/form": "^4.2",
-        "symfony/security-bundle": "^4.2",
-        "symfony/translation": "^4.2",
-        "symfony/validator": "^4.2",
-        "symfony/yaml": "^4.2",
+        "symfony/form": "^6.3",
+        "symfony/security-bundle": "^6.3",
+        "symfony/translation": "^6.3",
+        "symfony/validator": "^6.3",
+        "symfony/yaml": "^6.3",
         "phpunit/phpunit": "^9.5",
         "gyro/mvc-bundle": "^1.0-beta",
-        "symfony/templating": "^4.2",
+        "symfony/templating": "^6.3",
         "kriswallsmith/buzz": "0.13.*",
-        "symfony/css-selector": "^4.2",
+        "symfony/css-selector": "^6.3",
         "laminas/laminas-feed": "^2.10",
-        "phake/phake": "^3.1",
-        "composer/package-versions-deprecated": "^1.11",
+        "phake/phake": "^4.4",
         "predis/predis": "^1.1",
         "doctrine/coding-standard": "^9.0",
         "symfony/webpack-encore-bundle": "^1.13",
@@ -31,7 +30,10 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
         "sentry/sentry-symfony": "^4.8",
-        "symfony/dotenv": "4.4.*"
+        "symfony/dotenv": "^6.3",
+        "symfony/config": "^6.3",
+        "symfony/scheduler": "6.3.*",
+        "symfony/messenger": "6.3.*"
     },
     "scripts": {
         "auto-scripts": {
@@ -42,9 +44,8 @@
     "require-dev": {
         "symfony/maker-bundle": "^1.5",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "symfony/web-server-bundle": "4.4.*",
-        "symfony/stopwatch": "4.4.*",
-        "symfony/web-profiler-bundle": "4.4.*"
+        "symfony/stopwatch": "6.3.*",
+        "symfony/web-profiler-bundle": "6.3.*"
     },
     "autoload": {
         "psr-4": {
@@ -60,7 +61,7 @@
         "platform": {"php": "7.4"},
         "symfony": {
             "allow-contrib": true,
-            "require": "4.4.*"
+            "require": "6.3.*"
         }
     },
     "config": {
