Registered middleware on wrong bus

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -15,7 +15,7 @@ framework:
             App\Model\RunCommandMessage: sync
 
         buses:
-            default:
+            scheduler_default:
                 middleware:
                     - "Tideways\\SymfonyMessenger\\TidewaysMiddleware"
 
