Revert "Registered middleware on wrong bus"
This reverts commit 40ba51a3c38f8209ee2d23869cc9d8451656e2fa.

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -15,7 +15,7 @@ framework:
             App\Model\RunCommandMessage: sync
 
         buses:
-            scheduler_default:
+            default:
                 middleware:
                     - "Tideways\\SymfonyMessenger\\TidewaysMiddleware"
 
