--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,3 +2,5 @@ twig:
     paths: ['%kernel.project_dir%/templates']
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    form_themes:
+        - 'bulma_form_theme.html.twig'
