--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "sass-loader": "7.3.1"
   },
   "dependencies": {
-    "@tailwindcss/ui": "^0.3.0",
+    "bulma": "^0.9.4",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-page-visibility": "^6.2.0",
     "reconnecting-eventsource": "^1.0.4",
-    "tailwindcss": "^1.1.3",
     "underscore": "^1.9.1",
     "whatwg-fetch": "^2.0.4"
+  },
+  "scripts": {
+    "build": "encore production",
+    "dev": "encore dev --watch"
   }
 }
