Enable crawler detection

--- a/fpm.conf
+++ b/fpm.conf
@@ -1,4 +1,4 @@
 php_value[tideways.features.distributed_tracing]=1
 php_value[tideways.dynamic_tracepoints.enable_web]=1
 php_value[tideways.dynamic_tracepoints.enable_cli]=1
-php_value[tideways.features.http_useragent]=1
+php_value[tideways.features.crawler_detection]=1
