Install phpcs fixer and slevomat

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ yarn-error.log
 .phpunit.result.cache
 .ddev
 .env.local
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
